2004-02-26  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/14246
	* g++.dg/other/crash-3.C: New test.

2004-02-25  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* g++.dg/opt/inline4.C (dg-final): Robustify regexp.
	* g++.dg/opt/inline6.C (dg-final): Robustify regexp.

	* gcc.dg/builtins-config.h (HAVE_C99_RUNTIME): Don't define for PA
	HP-UX.

2004-02-25  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* g++.dg/eh/simd-1.C: Tweak again for SPARC.
	* g++.dg/eh/simd-2.C: Likewise.

2004-02-24  Michael Matz  <matz@suse.de>

	* gcc.dg/i386-regparm.c: New test.

2004-02-23  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>

	PR c++/14106
	* g++.dg/ext/typeof9.C: New test.

2004-02-23  Giovanni Bajo  <giovannibajo@gcc.gnu.org>

	PR c++/14250
	* g++.dg/other/switch1.C: New test.

2004-02-23  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.dg/cast-function-1.c: Adjust for new informative message.
	* gcc.dg/va-arg-1.c: Likewise.

2004-02-22  Hans-Peter Nilsson  <hp@axis.com>

	PR target/14209
	* gcc.c-torture/execute/20040218-1.c: New test.

2004-02-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* lib/target-supports.exp (check_alias_available): Don't mangle
	function `g' in test program.

2004-02-20  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* lib/target-supports.exp (check_profiling_available): Check
	argument to determine whether we support a profiling type.
	* lib/gcc-dg.exp (dg-require-profiling): Pass argument to
	check_profiling_available.
	* g++.dg/bprob/bprob.exp: Likewise
	* g77.dg/bprob/bprob.exp: Likewise.
	* gcc.misc-tests/bprob.exp: Likewise.
	* g++.old-deja/g++.law/profile1.C: Pass profiling type to
	dg-require-profiling and delete expected error handling.
	* gcc.dg/20021014-1.c: Likewise.
	* gcc.dg/nest.c: Likewise.

2004-02-20  Falk Hueffner  <falk@debian.org>

	PR target/14201
	* gcc.c-torture/compile/fix-trunc-mem-1.c: New test.

2004-02-20  Mark Mitchell  <mark@codesourcery.com>

	PR c++/14173
	* g++.dg/ext/packed5.C: New test.

	PR c++/14199