@@ -4,7 +4,7 @@
 /* Test against a problem with the combiner substituting explicit hard reg
    references when it shouldn't.  */
 void foo (int, int) __attribute__ ((regparm (3)));
-void foo (int x, int y)
+void __attribute__((regparm(3))) foo (int x, int y)
 {
   __asm__ __volatile__("" : : "d" (x), "r" (y));
 }
