@@ -2,7 +2,7 @@
 /* { dg-do run { target i?86-*-* } } */
 /* { dg-options "-O2" } */
 
-static int bar(int x) __asm__("bar");
+static int bar(int x) __asm__("bar") __attribute__((regparm(1)));
 static int __attribute__((regparm(1), noinline, used))
 bar(int x)
 {
